Fixed search bar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,8 @@
   color: black;
   width: 100%;
   max-width: 500px;
+  padding: 0.25rem 0.75rem;
+  font-size: 16px;
 }
 
 .notification-user-group {
